--- a/src/app/pages/pdcalc/components/main.component.html
+++ b/src/app/pages/pdcalc/components/main.component.html
@@ -49,7 +49,7 @@
                                 <mat-tab label="概率分布测算">
                                     <chart-incomerate #incomerate [initType]="initType" [proposalId]= "proposalId" [selectedIndex]="_selectProposaIndex" [datas]="projectYieldRateData" [graphicDescElRef]="graphicDescDom" [proData]="projectInfo" ></chart-incomerate>
                                 </mat-tab>
-                                <mat-tab label="压力情景测试">
+                                <mat-tab label="情景假设测算">
                                     <pressuresce-main [proData]="projectInfo" [initType]="initType" [proposalId]= "proposalId"></pressuresce-main>
                                 </mat-tab>
                             </mat-tab-group>
