--- a/src/app/pages/navbar/navbar.html
+++ b/src/app/pages/navbar/navbar.html
@@ -19,7 +19,7 @@
         </nav>
 
         <nav class="nav ">
-            <span class="user-info">Hello, 管理员</span>
+            <span class="user-info">{{userRealName}}</span>
             <a class="nav-link active" href="#"><i class="fa fa-user-circle-o"></i></a>
         </nav>
     </div>
