--- a/src/app/pages/pdcalc/components/pressuresce/main.html
+++ b/src/app/pages/pdcalc/components/pressuresce/main.html
@@ -2,10 +2,10 @@
 <scene-param [inputParams]="params"></scene-param>
 <div class="card card-region calc-result">
     <div class="card-header"  style="display: flex; align-items: center;background-color: #ffffff">
-        <div style="flex: 0 0 100px;">压力测算结果</div>
+        <div style="flex: 0 0 100px;">压力测算结果{{selectedIndex}}</div>
         <div style="flex: 1 1 50px;"></div>
         <mat-tab-group style="max-width:  600px;"  [selectedIndex]="selectedIndex">
-            <mat-tab [label]="item.securitiesShortName" *ngFor="let item of proData.list"></mat-tab>
+            <mat-tab [label]="item.securitiesShortName" *ngFor="let item of tabData"></mat-tab>
         </mat-tab-group>
     </div>
     <div class="card-body" style="padding: 0px;">
@@ -56,7 +56,7 @@
                                             <mat-ext-table [dataSource]="dataSource2">
                                                 <ng-container cdkColumnDef="rateSceneCode">
                                                     <cdk-header-cell *cdkHeaderCellDef>利率情景</cdk-header-cell>
-                                                    <cdk-cell *matCellDef="let element">{{element.rateSceneCode}}</cdk-cell>
+                                                    <cdk-cell *matCellDef="let element">{{element.rateSceneCodeText}}</cdk-cell>
                                                 </ng-container>
                                                 <ng-container cdkColumnDef="accumDefRate">
                                                     <cdk-header-cell *cdkHeaderCellDef>累计违约率</cdk-header-cell>
@@ -85,7 +85,7 @@
                                             <mat-ext-table [dataSource]="dataSource3">
                                                 <ng-container cdkColumnDef="rateSceneCode">
                                                     <cdk-header-cell *cdkHeaderCellDef>利率情景</cdk-header-cell>
-                                                    <cdk-cell *matCellDef="let element">{{element.rateSceneCode}}</cdk-cell>
+                                                    <cdk-cell *matCellDef="let element">{{element.rateSceneCodeText}}</cdk-cell>
                                                 </ng-container>
                                                 <ng-container cdkColumnDef="accumDefRate">
                                                     <cdk-header-cell *cdkHeaderCellDef>累计违约率</cdk-header-cell>
