--- a/src/app/pages/pdcalc/components/main.component.html
+++ b/src/app/pages/pdcalc/components/main.component.html
@@ -1,4 +1,5 @@
 <div class="card cyno-body pdcalc-main function-body">
+        <mat-spinner *ngIf="isLoading" style="position: fixed;top: calc(50vh - 50px);left: calc(50vw - 50px);z-index: 9999;"></mat-spinner>
         <div class="card-header">
           <h5 class="card-title project-title">
             {{projectInfo.projInfo && projectInfo.projInfo.projectName }} -  
@@ -17,34 +18,36 @@
                 <div class="container-fluid">
                     <div class="row" style="flex-wrap: nowrap;">
                         <div class="col" style="flex: 1 1 auto;position:  relative;padding-left:  0px;padding-right: 0px;">
-                            <button *ngIf="incomerate._hasCustomerCesuan && selectTabIndex < 1" (click)="savePdCalc()" type="button" class="btn btn-primary btn-sm" style="
+                            <button mat-raised-button color="primary" *ngIf="incomerate._hasCustomerCesuan && selectTabIndex < 1" (click)="savePdCalc()" type="button" class="btn-sm" style="
                                 position:  absolute;
-                                right: 80px;
-                                top: 10px;
+                                right: 00px;
+                                top: 0px;
                                 border-radius: 0rem;
                                 z-index: 5;
                             ">保存测算结果</button>
-                            <button *ngIf="selectTabIndex > 0" type="button" class="btn btn-light btn-sm" 
+                            <button mat-raised-button *ngIf="selectTabIndex > 0" type="button" class="btn-sm" 
                                 (click)="doPrCalcByPara()"
                                 style="
                                 position:  absolute;
-                                right: 80px;
-                                top: 10px;
+                                right: 100px;
+                                top: 0px;
                                 border-radius: 0rem;
                                 z-index: 5;
                             ">测 算</button>
-                            <a type="button"
-                                #exportReport
-                                href="#"
+                            <button 
+                                type="button"
+                                mat-raised-button
+                                (click)="previewReport()"
+                                color="primary"
                                 target="_blank"
-                                class="btn btn-primary btn-sm" 
+                                class="btn-sm" 
                                 style="
                                 position:  absolute;
                                 right: 0px;
-                                top: 10px;
+                                top: 0px;
                                 border-radius: 0rem;
                                 z-index: 5;
-                            ">查看报告</a>
+                            ">查看报告</button>
                             <mat-tab-group [selectedIndex]="activeTabIndex">
                                 <mat-tab label="概率分布测算">
                                     <chart-incomerate #incomerate [initType]="initType" [proposalId]= "proposalId" [selectedIndex]="_selectProposaIndex" [datas]="projectYieldRateData" [graphicDescElRef]="graphicDescDom" [proData]="projectInfo" ></chart-incomerate>
@@ -70,6 +73,10 @@
                     </div>
                 </div>
         </div>
+      </div>
+
+      <div style="display: none;">
+          <iframe #exportReport  href="#"></iframe>
       </div>
   </div>
 
